[package]
name = "merino-proto"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
byteorder = "1.5.0"
eframe = "0.33.3"
egui = "0.33.3"
egui_dock = "0.18.0"
rfd = "0.17.2"
serde = "1.0.228"
serde_json = { version = "1.0.149", features = ["preserve_order"] }
strum = { version = "0.28.0", features = ["derive"] }
