[package]
name = "merino-proto"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bitflags = "2.11.1"
byteorder = "1.5.0"
eframe = "0.33.3"
egui = "0.33.3"
egui_dock = { version = "0.18.0", features = ["serde"] }
enum-map = "2.7.3"
gfarch = "0.3.0"
image = "0.25.10"
paste = "1.0.15"
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
strum = { version = "0.28.0", features = ["derive"] }
